# StrMod

./: .clang-format  .cvsignore  .hgignore  .hgtags  AUTHORS  CMakeLists.txt  COPYRIGHT  ChangeLog  ChangeLog.1  Doxyfile  GNUmakefile  Makefile.in  README  README.md  TODO  configure.in  svn-ChangeLog.txt  svn-ChangeLog.xml
EHnet++/: .cvsignore  CMakeLists.txt  ChangeLog  ChangeLog.1  GNUmakefile.in  InetAddrDef.cxx  InetAddrNetDB.cxx  InetAddress.cxx  Makefile.in  NET_ClassIdent.cxx  NetString.cxx  SocketAddress.cxx  SocketAddressDef.cxx  acconfig.h  configure.in  svn-ChangeLog.txt  svn-ChangeLog.xml
EHnet++/EHnet++/: .perceps_conf  InetAddress.h  NET_ClassIdent.h  NString.h  SocketAddress.h
EHnet++/pubinclude/EHnet++/: InetAddress.h  SocketAddress.h
EHnet++/tests/: .cvsignore  morejunk.cxx
LCore/: .cvsignore  .perceps_conf  CMakeLists.txt  COPYRIGHT  ChangeLog  Debugable.cxx  GNUmakefile  GNUmakefile.in  Makefile.in  classimp.cxx  clsprgid.cxx  cltpsstr.cxx  debugabl.cxx  defeh_cl.cxx  defproto.cxx  defrefco.cxx  defspscl.cxx  enum_set.cxx  gentyimp.cxx  hopclimp.cxx  lcerror.cxx  objctstd.cxx  objctstr.cxx  objecimp.cxx  progrimp.cxx  protoimp.cxx  refcoimp.cxx  rfcntptr.cxx  rfcntptt.cxx  simple_bitset.cxx  svn-ChangeLog.txt  svn-ChangeLog.xml
LCore/LCore/: ClassTypes.h  Debugable.h  GenTypes.h  HDPrefix  HopClTypes.h  LCoreError.h  Object.h  Programmers.h  Protocol.h  RefCountPtr.h  RefCountPtrT.h  RefCounting.h  SPSClTypes.h  WFClTypes.h  auto_ptr.h  enum_set.h  simple_bitset.h  simple_bitset_optim.h
LCore/pubinclude/LCore/: Debugable.h  GenTypes.h  LCoreError.h  enum_set.h  simple_bitset.h
LCore/tests/: .cvsignore  refcnt.cxx  test_enum_set.cxx
StrMod/: .cvsignore  ApplyVisitor.cxx  BufferChunk.cxx  BufferChunkFactory.cxx  CMakeLists.txt  ChangeLog  ChangeLog.1  CharChopper.cxx  ChunkIterator.cxx  ChunkType.cxx  ChunkVisitor.cxx  DBStrChunk.cxx  DynamicBuffer.cxx  EOFStrChunk.cxx  EchoModule.cxx  FDUtil.cxx  GNUmakefile  GNUmakefile.in  GNUmakefile.iris  GV_Iterator.cxx  GraphVizVisitor.cxx  GroupChunk.cxx  GroupVector.cxx  HL7Module.cxx  InSerializer.cxx  InfiniteModule.cxx  LinearExtent.cxx  LinearExtentStrmOp.cxx  LocalCopy.cxx  Makefile.in  NewlineChopper.cxx  OutSerializer.cxx  PassThrough.cxx  PreAllocBuffer.cxx  Principles  ProcessorModule.cxx  RouterModule.cxx  STR_ClassIdent.cxx  SimpleMulti.cxx  SimplePlug.cxx  (+36 more)
StrMod/StrMod/: .cvsignore  .perceps_conf  ApplyVisitor.h  BufferChunk.h  BufferChunkFactory.h  CharChopper.h  ChunkIterator.h  ChunkType.h  ChunkVisitor.h  DBStrChunk.h  DynamicBuffer.h  EOFStrChunk.h  EchoModule.h  FDUtil.h  GV_Iterator.h  GraphVizVisitor.h  GroupChunk.h  GroupVector.h  HL7Module.h  InSerializer.h  InfiniteModule.h  LinearExtent.h  LocalCopy.h  NewlineChopper.h  OS2SkMod.h  OutSerializer.h  PassThrough.h  PreAllocBuffer.h  ProcessorModule.h  RouterModule.h  STR_ClassIdent.h  SimpleMulti.h  SimplePlug.h  SimpleTelnetClient.h  SockListenModule.h  SocketModule.h  StackSwapper.h  StaticBuffer.h  StrChunk.h  StrChunkDecorator.h  (+18 more)
StrMod/doc/: TelnetParser-call.dia  TelnetParser.dia  TelnetParserStates.dia
StrMod/pubinclude/StrMod/: ApplyVisitor.h  BufferChunk.h  BufferChunkFactory.h  CharChopper.h  ChunkIterator.h  ChunkVisitor.h  DynamicBuffer.h  EOFStrChunk.h  EchoModule.h  FDUtil.h  GraphVizVisitor.h  GroupChunk.h  InSerializer.h  InfiniteModule.h  LinearExtent.h  LocalCopy.h  NewlineChopper.h  OutSerializer.h  PassThrough.h  PreAllocBuffer.h  ProcessorModule.h  RouterModule.h  SimpleMulti.h  SimpleTelnetClient.h  SockListenModule.h  SocketModule.h  StackSwapper.h  StaticBuffer.h  StrChunk.h  StrChunkPtr.h  StrSubChunk.h  StreamFDModule.h  StreamModule.h  StreamProcessor.h  StreamSplitter.h  TelnetChars.h  TelnetChunkBuilder.h  TelnetChunker.h  TelnetChunkerData.h  TelnetParser.h  (+1 more)
StrMod/tests/: .cvsignore  TelnetToAscii.cxx  TelnetToAscii.h  dlmalloc.c  echoserv.cxx  server.cxx  testGV.cxx  testPreAlloc.cxx  testchunk.cxx  testdist.cxx  testecho.cxx  testextent.cxx  testinfinite.cxx  testmulti.cxx  testrouter.cxx  testserial.cxx  testsock.cxx  testsplit.cxx  teststr.cxx  teststrfd.cxx  testvisitor.cxx  tstelnet.cxx  ttelnet.cxx
StrMod/utils/: audiodiv.c  cechoserv.c  writelots.c
UniEvent/: .cvsignore  .perceps_conf  CMakeLists.txt  ChangeLog  Dispatcher.cxx  Event.cxx  EventPtr.cxx  GNUmakefile.in  InterruptibleDispatcher.cxx  Makefile.in  OSConditionManager.cxx  OSObjectConditions.cxx  RegistryDispatcherGlue.cxx  SimpleDispatcher.cxx  SimpleDispatcherImp.cxx  StandCondManager.cxx  StandObConditions.cxx  Timer.cxx  TimerEventTracker.cxx  UNEVT_ClassIdent.cxx  UNIXConditionManager.cxx  UNIXError.cxx  UNIXSignalHandler.cxx  UNIXTimer.cxx  UNIXpollManager.cxx  UNIXpollManagerImp.cxx  UnixEventPoll.cxx  UnixEventRegistry.cxx  svn-ChangeLog.txt  svn-ChangeLog.xml
UniEvent/UniEvent/: Dispatcher.h  Event.h  EventPtr.h  EventPtrT.h  InterruptibleDispatcher.h  OSConditionManager.h  OSObjectConditions.h  RegistryDispatcherGlue.h  SimpleDispatcher.h  StandCondManager.h  StandObConditions.h  Timer.h  TimerEventTracker.h  UNEVT_ClassIdent.h  UNIXConditionManager.h  UNIXError.h  UNIXObConditions.h  UNIXSignalHandler.h  UNIXTimer.h  UNIXpollManager.h  UNIXpollManagerImp.h  UnixEventPoll.h  UnixEventRegistry.h
UniEvent/pubinclude/UniEvent/: Dispatcher.h  Event.h  EventPtr.h  InterruptibleDispatcher.h  RegistryDispatcherGlue.h  SimpleDispatcher.h  Timer.h  TimerEventTracker.h  UNIXError.h  UnixEventPoll.h  UnixEventRegistry.h
UniEvent/tests/: .cvsignore  ChangeLog  munchdisptest.pl  testUPoll.cxx  testdisp.cxx  testdisp.h  testsig.cxx  testsimple.cxx  testtimer.cxx  testupoll.cxx
cmake/: NetConfig.cmake.in
distbin/: .cvsignore  proclibsrc.pl.in
examples/: PortForward.cxx
old-buildsystem/: configure.in
scratch/: Makefile  XMLUTF8Builder.cxx  XMLUTF8Builder.h  XMLUTF8Lexer.cpp  XMLUTF8Lexer.h  XMLUTF8LexerSane.cpp  XMLUTF8Parser.cpp
tests-cppunit/: ChangeLog  ChangeLog.1  DependTest.cxx  LinearExtentTest.cxx  XMLUTF8Test.cpp  buildtests.cxx  svn-ChangeLog.txt  svn-ChangeLog.xml
xml/: Makefile  Makefile.in  (+9 more)
(+8 files in other folders)
