dnl Process this file with autoconf to produce a configure script.
AC_INIT()
AC_CONFIG_AUX_DIR(distbin)

dnl Checks for programs.
AC_PATH_PROG(pwd,pwd,error)
AC_PATH_PROG(cmp,cmp,error)
AC_PATH_PROG(cat,cat,error)
AC_PATH_PROG(perl,perl,error)
AC_PATH_PROG(proclibsrc,proclibsrc.pl,`$pwd`/distbin/proclibsrc.pl)
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile LCore/Makefile UniEvent/Makefile EHnet++/Makefile StrMod/Makefile distbin/proclibsrc.pl)

chmod 755 distbin/proclibsrc.pl
