dnl Process this file with autoconf to produce a configure script.
AC_INIT(The StreamModule System, 0.5.0, hopper@omnifarious.org)
AC_CONFIG_AUX_DIR(distbin)

dnl Checks for programs.
AC_PATH_PROG(pwd,pwd,error)
AC_PATH_PROG(cmp,cmp,error)
AC_PATH_PROG(cat,cat,error)
AC_PATH_PROG(perl,perl,error)
AC_PATH_PROG(proclibsrc,proclibsrc.pl,`$pwd`/distbin/proclibsrc.pl)
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Checks for specific strange quirks
AC_LANG_PUSH(C++)
  AC_MSG_CHECKING(if accept(2) takes a size_t * like it should)
  AC_COMPILE_IFELSE(
    [AC_LANG_SOURCE([[#include <sys/types.h>
#include <sys/socket.h>
int main()
{
   unsigned char addrbuf[8192];
   struct sockaddr *saddr = reinterpret_cast<struct sockaddr *>(addrbuf);
   size_t length = sizeof(addrbuf);
   accept(0, saddr, &length);
   return 0;
}]])], AC_MSG_RESULT(yes),

    AC_COMPILE_IFELSE(
      [[AC_LANG_SOURCE([[#include <sys/types.h>
#include <sys/socket.h>
int main()
{
   unsigned char addrbuf[8192];
   struct sockaddr *saddr = reinterpret_cast<struct sockaddr *>(addrbuf);
   int length = sizeof(addrbuf);
   accept(0, saddr, &length);
   return 0;
}]])]], AC_MSG_RESULT(no - stupid thing), AC_MSG_WARN(neither int * nor size_t * worked, assuming int *))
   CPPFLAGS="$CPPFLAGS -DACCEPT_NEEDSINT")

AC_LANG_POP()

AC_OUTPUT(Makefile LCore/Makefile UniEvent/Makefile EHnet++/Makefile StrMod/Makefile xml/Makefile distbin/proclibsrc.pl)

chmod 755 distbin/proclibsrc.pl
