dnl Process this file with autoconf to produce a configure script.
AC_INIT(InetAddress.cc)
AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LN_S
AC_PATH_PROG(DEPDB, dependdb, no_dependdb)

dnl Checks for libraries.
AC_CHECK_LIB(nsl,t_open)
AC_CHECK_LIB(socket,socket)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
if test "$ac_cv_c_bigendian" = "yes"; then
  CPPFLAGS="$CPPFLAGS -DBYTE_ORDER_DEFINED -DORDER_UNIX"
else
  CPPFLAGS="$CPPFLAGS -DBYTE_ORDER_DEFINED -DORDER_XINU"
fi

dnl Checks for library functions.
AC_CHECK_FUNCS(gethostname)

echo "Removing all dependency stamps and databases"
rm -f *.stamp dependdb.gdbm

AC_OUTPUT(GNUmakefile)
