dnl Process this file with autoconf to produce a configure script.
AC_INIT(ChunkType.cc)
AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
AC_PATH_PROG(DEPDB, dependdb, no_dependdb)

dnl Checks for libraries.
AC_CHECK_LIB(nsl,t_open)
AC_CHECK_LIB(socket,socket)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
echo $ac_n "checking for working bool""... $ac_c" 1>&6
AC_TRY_COMPILE(,
[{
   bool foo;
   int bar;
   void *baz;

   foo = true;
   foo = false;
   bar = 1;
   foo = bar;
   baz = &bar;
   foo = baz;
   bar = foo;
}],echo "yes",[echo "no"
echo "Currently, a working bool is needed to compile this package."
exit 1])
AC_STRUCT_ST_BLKSIZE
AC_C_BIGENDIAN
if test "$ac_cv_c_bigendian" = "yes"; then
  CPPFLAGS="$CPPFLAGS -DBYTE_ORDER_DEFINED -DORDER_UNIX"
else
  CPPFLAGS="$CPPFLAGS -DBYTE_ORDER_DEFINED -DORDER_XINU"
fi

echo "Removing all dependency stamps and databases"
rm -f *.stamp dependdb.gdbm

AC_OUTPUT(GNUmakefile)
